# task-scheduler-back

./: README.md  docker-compose.yml  heroku.yml  package-lock.json  pyproject.toml  requirements.txt
notes/: admin.py  cron.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_remove_note_time_alter_note_date.py  0003_task.py  0004_alter_task_date.py
search/: urls.py  views.py
task_scheduler/: settings.py  urls.py
tasks/: models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
